welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	var l = nums.length -3
	var tab = [1,2,3]
	var rep = false
	for (i<- 0 to l) {
		if (nums(i) == tab(0)) {
			if (nums.(i+1) == tab(2)) {
				if (nums(i+2) == tab(3)) {
					rep = true
					
				}
				
			}
		}
	}
	return rep
	
}
